tweaks and comments

--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-03 08:43:22 -0500 
+%% Created for Jeff Erickson at 2021-06-04 13:59:13 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -19,7 +19,8 @@
 	pages = {191--201},
 	title = {Intrinsic morphing of compatible triangulations},
 	volume = {9},
-	year = {2003}}
+	year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1142/S0218654303000115}}
 
 @inproceedings{celp-hmgt-21,
 	arxiv = {2007.07927},
@@ -3173,13 +3174,13 @@
 @article{r-pepf-64,
 	author = {Rankine, W. J. Macquorn},
 	date-added = {2019-12-03 05:05:39 -0600},
-	date-modified = {2019-12-03 05:10:24 -0600},
+	date-modified = {2021-06-04 13:47:50 -0500},
 	doi = {10.1080/14786446408643629},
 	journal = {London, Edinburgh, and Dublin Phil. Mag J. Sci.},
 	keywords = {Maxwell-Cremona},
 	number = {180},
 	pages = {92},
-	title = {Principle of the equilibrium of polyhedral frams},
+	title = {Principle of the equilibrium of polyhedral frames},
 	volume = {27},
 	year = {1864},
 	Bdsk-Url-1 = {https://doi.org/10.1080/14786446408643629}}
@@ -16389,9 +16390,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{t-hdg-63,
 	author = {Tutte, William T.},
 	date-added = {2011-11-07 12:36:21 +0000},
-	date-modified = {2020-07-13 19:20:20 -0500},
+	date-modified = {2021-06-04 13:59:13 -0500},
 	doi = {10.1112/plms/s3-13.1.743},
 	journal = {Proc. London Math. Soc.},
+	keywords = {spring embedding, radial map ($G^\natural$)},
 	number = {3},
 	pages = {743--768},
 	title = {How to draw a graph},
