--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-04 13:59:13 -0500 
+%% Created for Jeff Erickson at 2021-06-05 15:18:50 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kl-mpgss-06,
+	author = {Kobourov, Stephen G. and Landis, Matthew},
+	date-added = {2021-06-05 14:56:39 -0500},
+	date-modified = {2021-06-05 14:57:32 -0500},
+	doi = {0.7155/jgaa.00162},
+	journal = {J. Graph Algorithms Appl.},
+	number = {1},
+	pages = {113--127},
+	title = {Morphing planar graphs in spherical space},
+	volume = {12},
+	year = {2006},
+	Bdsk-Url-1 = {https://doi.org/0.7155/jgaa.00162}}
 
 @article{sg-imct-03,
 	author = {Surazhsky, Vitaly and Gotsman, Craig},
@@ -124,9 +137,9 @@
 	arxiv = {1206.2574},
 	author = {Hass, Joel and Scott, Peter},
 	date-added = {2021-05-31 14:40:53 -0500},
-	date-modified = {2021-05-31 14:48:56 -0500},
+	date-modified = {2021-06-05 15:17:49 -0500},
 	doi = {10.4310/AJM.2015.v19.n4.a2},
-	journal = {Asian Journal of Mathematics},
+	journal = {Asian J. Math.},
 	number = {4},
 	pages = {593--636},
 	title = {Simplicial energy and simplicial harmonic maps},
@@ -14986,8 +14999,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{amr-iscm-97,
 	author = {Aitchison, Iain R. and Matsumoto, Saburo and Rubinstein, J. Hyam},
 	date-added = {2011-12-27 23:26:03 +0000},
-	date-modified = {2011-12-27 23:30:01 +0000},
-	journal = {Asian J. Math},
+	date-modified = {2021-06-05 15:18:50 -0500},
+	doi = {10.4310/AJM.1997.v1.n1.a4},
+	journal = {Asian J. Math.},
 	number = {1},
 	pages = {85--95},
 	read = {1},
