Alphebetize De Lenheer under D, not L

--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-05 15:18:50 -0500 
+%% Created for Jeff Erickson at 2021-06-08 11:56:28 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -262,9 +262,9 @@
 
 @article{l-epmtt-20,
 	arxiv = {1904.12221},
-	author = {Leenheer, Patrick De},
+	author = {{De Leenheer}, Patrick},
 	date-added = {2020-11-14 17:22:37 -0600},
-	date-modified = {2020-11-14 17:30:25 -0600},
+	date-modified = {2021-06-08 11:56:28 -0500},
 	doi = {10.1137/19M1265193},
 	journal = {SIAM Review},
 	number = {3},
@@ -15007,7 +15007,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	read = {1},
 	title = {Immersed surfaces in cubed manifolds},
 	volume = {1},
-	year = {1997}}
+	year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.4310/AJM.1997.v1.n1.a4}}
 
 @article{alr-csal-92,
 	author = {Aitchison, Iain R. and Lumsden, E. and Rubinstein, J. Hyam},
