--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-08 11:56:28 -0500 
+%% Created for Jeff Erickson at 2021-06-18 12:02:27 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{k-fpgd-20,
+	author = {Klemz, Boris},
+	date-added = {2021-06-18 11:24:13 -0500},
+	date-modified = {2021-06-18 11:41:22 -0500},
+	doi = {10.17169/refubium-28463},
+	school = {Freie Universität Berlin},
+	title = {Facets of Planar Graph Drawing},
+	url = {https://refubium.fu-berlin.de/handle/fub188/28715},
+	year = {2020}}
+
+@inproceedings{alflp-omcd-15,
+	arxiv = {1503.09021},
+	author = {Angelini, Patrizio and Lozzo, Giordano Da and Frati, Fabrizio and Lubiw, Anna and Patrignani, Maurizio and Roselli, Vincenzo},
+	booktitle = {Proc. 31st Int. Symp. Comput. Geom.},
+	date-added = {2021-06-18 11:13:54 -0500},
+	date-modified = {2021-06-18 11:15:39 -0500},
+	number = {34},
+	pages = {126--140},
+	series = {Leibniz Int. Proc. Informatics},
+	title = {Optimal Morphs of Convex Drawings},
+	year = {2015}}
 
 @article{kl-mpgss-06,
 	author = {Kobourov, Stephen G. and Landis, Matthew},
