--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,38 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-05-31 17:52:41 -0500 
+%% Created for Jeff Erickson at 2021-06-20 17:50:51 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ay-msnda-13,
+	author = {Alon, Noga and Yuster, Raphael},
+	comments = {Full version of \cite{ay-slstn-10}},
+	date-added = {2021-06-20 17:40:14 -0500},
+	date-modified = {2021-06-20 17:49:53 -0500},
+	doi = {10.1145/2508028.2505989},
+	journal = {J. ACM},
+	keywords = {nested dissection, asymmetric, arbitrary fields},
+	number = {4},
+	pages = {25:1--25:8},
+	title = {Matrix Sparsification and Nested Dissection over Arbitrary Fields},
+	volume = {60},
+	year = {2013}}
+
+@inproceedings{ay-slstn-10,
+	author = {Alon, Noga and Yuster, Raphael},
+	booktitle = {Proc. 51st IEEE Symp. Found. Comput. Sci.},
+	comments = {Full version in \cite{ay-msnda-13}},
+	date-added = {2021-06-20 17:28:22 -0500},
+	date-modified = {2021-06-20 17:50:41 -0500},
+	doi = {10.1109/FOCS.2010.28},
+	keywords = {nested dissection, asymmetric, arbitrary fields},
+	pages = {225--234},
+	title = {Solving linear systems through nested dissection},
+	year = {2010}}
 
 @inproceedings{l-ptfmm-14,
 	author = {Le~Gall, François},
