--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-18 12:02:27 -0500 
+%% Created for Jeff Erickson at 2021-06-20 17:02:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -17,7 +17,9 @@
 	school = {Freie Universität Berlin},
 	title = {Facets of Planar Graph Drawing},
 	url = {https://refubium.fu-berlin.de/handle/fub188/28715},
-	year = {2020}}
+	year = {2020},
+	Bdsk-Url-1 = {https://refubium.fu-berlin.de/handle/fub188/28715},
+	Bdsk-Url-2 = {https://doi.org/10.17169/refubium-28463}}
 
 @inproceedings{alflp-omcd-15,
 	arxiv = {1503.09021},
@@ -3522,8 +3524,9 @@
 	author = {Chrobak, Marek and Goodrich, Michael T. and Tamassia, Roberto},
 	booktitle = {Proc. 12th Ann. Symp. Comput. Geom.},
 	date-added = {2019-12-01 08:10:36 -0600},
-	date-modified = {2019-12-01 08:11:20 -0600},
+	date-modified = {2021-06-20 17:02:10 -0500},
 	doi = {10.1145/237218.237401},
+	keywords = {spring embedding, Maxwell-Cremona, Hong-Namagochi},
 	pages = {319--328},
 	title = {Convex Drawings of Graphs in Two and Three Dimensions (Preliminary Version)},
 	year = {1996},
