some SIGGRAPH stuff

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-20 17:02:10 -0500 
+%% Created for Jeff Erickson at 2021-06-20 19:20:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{wz-lipwa-14,
+	author = {Weber, Ofir and Zorin, Denis},
+	date-added = {2021-06-20 19:13:04 -0500},
+	date-modified = {2021-06-20 19:20:09 -0500},
+	doi = {10.1145/2601097.2601227},
+	journal = {ACM Trans. Graphics},
+	keywords = {self-overlapping curves, spring embedding},
+	note = {Proc. SIGGRAPH 2014},
+	number = {4},
+	pages = {75:1--75:12},
+	title = {Locally injective parametrization with arbitrary fixed boundaries},
+	volume = {33},
+	year = {2014}}
+
+@article{sjzp-pe-19,
+	author = {Shen, Hanxiao and Jiang, Zhongshi and Zorin, Denis and Panozzo, Daniele},
+	date-added = {2021-06-20 18:14:54 -0500},
+	date-modified = {2021-06-20 19:13:02 -0500},
+	doi = {10.1145/3306346.3323012},
+	journal = {ACM Trans. Graphics},
+	note = {Proc. SIGGRAPH 2019},
+	number = {4},
+	pages = {32:1--32:13},
+	title = {Progressive embedding},
+	volume = {38},
+	year = {2019}}
 
 @phdthesis{k-fpgd-20,
 	author = {Klemz, Boris},
@@ -1212,9 +1239,9 @@
 @article{c-sadsp-19,
 	author = {Cabello, Sergio},
 	date-added = {2020-08-28 13:08:06 -0500},
-	date-modified = {2020-08-28 13:08:22 -0500},
+	date-modified = {2021-06-20 18:16:54 -0500},
 	doi = {10.1145/3218821},
-	journal = {{ACM} Trans. Algorithms},
+	journal = {ACM Trans. Algorithms},
 	number = {2},
 	pages = {21:1--21:38},
 	title = {Subquadratic Algorithms for the Diameter and the Sum of Pairwise Distances in Planar Graphs},
@@ -1247,9 +1274,9 @@
 @article{ssc-vhm-19,
 	author = {Sharp, Nicholas and Soliman, Yousuf and Crane, Keenan},
 	date-added = {2020-08-28 13:01:58 -0500},
-	date-modified = {2021-05-31 15:02:47 -0500},
+	date-modified = {2021-06-20 18:16:46 -0500},
 	doi = {10.1145/3243651},
-	journal = {{ACM} Trans. Graphics},
+	journal = {ACM Trans. Graphics},
 	number = {3},
 	pages = {24:1--24:19},
 	title = {The Vector Heat Method},
@@ -1260,9 +1287,9 @@
 @article{ssc-nit-19,
 	author = {Sharp, Nicholas and Soliman, Yousuf and Crane, Keenan},
 	date-added = {2020-08-28 13:00:18 -0500},
-	date-modified = {2021-05-31 15:02:43 -0500},
+	date-modified = {2021-06-20 18:16:50 -0500},
 	doi = {10.1145/3306346.3322979},
-	journal = {{ACM} Trans. Graphics},
+	journal = {ACM Trans. Graphics},
 	number = {4},
 	pages = {55:1--55:16},
 	title = {Navigating intrinsic triangulations},
@@ -1426,8 +1453,8 @@
 @article{mstw-e3u-18,
 	author = {Matoušek, Jiří and Sedgwick, Eric and Tancer, Martin and Wagner, Uli},
 	date-added = {2020-08-28 12:23:36 -0500},
-	date-modified = {2020-08-28 12:27:30 -0500},
-	journal = {J. {ACM}},
+	date-modified = {2021-06-20 18:16:22 -0500},
+	journal = {J. ACM},
 	number = {1},
 	pages = {5:1--5:49},
 	title = {Embeddability in the 3-Sphere Is Decidable},
@@ -1439,9 +1466,9 @@
 @article{gpptw-sn-19,
 	author = {Goaoc, Xavier and Paták, Pavel and Patáková, Zuzana and Tancer, Martin and Wagner, Uli},
 	date-added = {2020-08-28 12:22:17 -0500},
-	date-modified = {2020-08-28 12:23:06 -0500},
+	date-modified = {2021-06-20 18:16:25 -0500},
 	doi = {10.1145/3314024},
-	journal = {J. {ACM}},
+	journal = {J. ACM},
 	number = {3},
 	pages = {21:1--21:18},
 	title = {Shellability is NP-complete},
@@ -4623,9 +4650,9 @@
 @article{blps-mopgd-13,
 	author = {Biedl, Therese C. and Lubiw, Anna and Petrick, Mark and Spriggs, Michael J.},
 	date-added = {2019-05-29 13:50:26 +0200},
-	date-modified = {2019-05-29 13:50:53 +0200},
+	date-modified = {2021-06-20 18:16:58 -0500},
 	doi = {10.1145/2500118},
-	journal = {{ACM} Trans. Algorithms},
+	journal = {ACM Trans. Algorithms},
 	number = {4},
 	pages = {29:1--29:24},
 	read = {1},
