--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-20 17:50:51 -0500 
+%% Created for Jeff Erickson at 2021-06-22 13:37:14 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{b-simig-68,
+	author = {Bareiss, Erwin H.},
+	date-added = {2021-06-22 13:34:58 -0500},
+	date-modified = {2021-06-22 13:36:16 -0500},
+	doi = {10.2307/2004533},
+	journal = {Math. Comput.},
+	number = {103},
+	pages = {565--578},
+	read = {1},
+	title = {{Sylvester's} Identity and multistep integer-preserving {Gaussian} elimination},
+	volume = {22},
+	year = {1968}}
 
 @article{ay-msnda-13,
 	author = {Alon, Noga and Yuster, Raphael},
@@ -21,7 +34,8 @@
 	pages = {25:1--25:8},
 	title = {Matrix Sparsification and Nested Dissection over Arbitrary Fields},
 	volume = {60},
-	year = {2013}}
+	year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1145/2508028.2505989}}
 
 @inproceedings{ay-slstn-10,
 	author = {Alon, Noga and Yuster, Raphael},
@@ -33,10 +47,11 @@
 	keywords = {nested dissection, asymmetric, arbitrary fields},
 	pages = {225--234},
 	title = {Solving linear systems through nested dissection},
-	year = {2010}}
+	year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1109/FOCS.2010.28}}
 
 @inproceedings{l-ptfmm-14,
-	author = {Le~Gall, François},
+	author = {Le~Gall, Fran{\c c}ois},
 	booktitle = {Proc. 25th int. Symb. Alg. Comput.},
 	date-added = {2021-05-31 17:52:36 -0500},
 	date-modified = {2021-05-31 17:52:36 -0500},
@@ -488,7 +503,7 @@
 	author = {Bradford, Phillip G.},
 	date-added = {2012-09-21 04:14:23 +0000},
 	date-modified = {2012-09-21 04:21:23 +0000},
-	institution = {Max-Planck-Institut für Informatik},
+	institution = {Max-Planck-Institut f{\"u}r Informatik},
 	number = {MPI-I-95-1-025},
 	read = {1},
 	title = {Matching nuts and bolts optimally},
@@ -546,7 +561,7 @@
 	year = {1992}}
 
 @article{js-mnbot-98,
-	author = {Komlós, János and Ma, Yuan and Szemerédi, Endre},
+	author = {Koml{\'o}s, J{\'a}nos and Ma, Yuan and Szemer{\'e}di, Endre},
 	date-added = {2012-09-21 03:50:37 +0000},
 	date-modified = {2012-09-21 04:01:06 +0000},
 	journal = {SIAM J. Discrete Math.},
