--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-22 13:37:14 -0500 
+%% Created for Jeff Erickson at 2021-06-22 15:34:13 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{ckkpp-sdlsn-18,
+	arxiv = {1811.10722},
+	author = {Cohen, Michael B. and Kelner, Jonathan and Kyng, Rasmus and Peebles, John and Peng, Richard and Rao, Anup B. and Sidford, Aaron},
+	booktitle = {Proc. 59th Ann. IEEE Sympos. Found. Comput. Sci.},
+	date-added = {2021-06-22 13:48:15 -0500},
+	date-modified = {2021-06-22 15:34:09 -0500},
+	doi = {10.1109/FOCS.2018.00089},
+	pages = {898--909},
+	title = {Solving Directed {Laplacian} Systems in Nearly-Linear Time through Sparse {LU} Factorizations},
+	year = {2018}}
 
 @article{b-simig-68,
 	author = {Bareiss, Erwin H.},
@@ -20,7 +31,8 @@
 	read = {1},
 	title = {{Sylvester's} Identity and multistep integer-preserving {Gaussian} elimination},
 	volume = {22},
-	year = {1968}}
+	year = {1968},
+	Bdsk-Url-1 = {https://doi.org/10.2307/2004533}}
 
 @article{ay-msnda-13,
 	author = {Alon, Noga and Yuster, Raphael},
