upward planar morphs

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-22 11:07:01 -0500 
+%% Created for Jeff Erickson at 2021-06-24 11:20:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ddfpr-upm-20,
+	abstract = {We prove that, given two topologically-equivalent upward planar straight-line drawings of an n-vertex directed graph G, there always exists a morph between them such that all the intermediate drawings of the morph are upward planar and straight-line. Such a morph consists of O(1) morphing steps if G is a reduced planar st-graph, O(n) morphing steps if G is a planar st-graph, O(n) morphing steps if G is a reduced upward planar graph, and {\$}{\$}O(n\^{}2){\$}{\$}morphing steps if G is a general upward planar graph. Further, we show that {\$}{\$}{$\backslash$}varOmega (n){\$}{\$}morphing steps might be necessary for an upward planar morph between two topologically-equivalent upward planar straight-line drawings of an n-vertex path.},
+	author = {Da Lozzo, Giordano and Di Battista, Giuseppe and Frati, Fabrizio and Patrignani, Maurizio and Roselli, Vincenzo},
+	date-added = {2021-06-24 11:20:14 -0500},
+	date-modified = {2021-06-24 11:20:28 -0500},
+	doi = {10.1007/s00453-020-00714-6},
+	journal = {Algorithmica},
+	number = {10},
+	pages = {2985--3017},
+	title = {Upward Planar Morphs},
+	volume = {82},
+	year = {2020},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00453-020-00714-6}}
 
 @article{wz-lipwa-14,
 	author = {Weber, Ofir and Zorin, Denis},
