more spaces of triangulations

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,51 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-24 11:20:34 -0500 
+%% Created for Jeff Erickson at 2021-06-24 16:17:46 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ah-sgts-87,
+	author = {Awartini, Marwan and Henderson, David W.},
+	date-added = {2021-06-24 16:16:32 -0500},
+	date-modified = {2021-06-24 16:17:44 -0500},
+	doi = {10.2307/2000738},
+	journal = {Trans. Amer. Math. Soc.},
+	number = {2},
+	pages = {721--732},
+	title = {Spaces of geodesic triangulations of the sphere},
+	volume = {304},
+	year = {1987}}
+
+@phdthesis{l-ssgts-20,
+	author = {Luo, Yanwen},
+	date-added = {2021-06-24 15:35:45 -0500},
+	date-modified = {2021-06-24 15:36:11 -0500},
+	school = {Univ. California Davis},
+	title = {The Spaces of Shapes and Geodesic Triangulations on Surfaces},
+	year = {2020}}
+
+@misc{c-abcht-19,
+	arxiv = {1910.00240},
+	author = {Cerf, Jean},
+	date-added = {2021-06-24 15:31:05 -0500},
+	date-modified = {2021-06-24 15:33:24 -0500},
+	howpublished = {Preprint},
+	month = {October},
+	title = {About the {Bloch}--{Connelly}--{Henderson} Theorem on the simplexwise linear homeomorphisms of a convex 2-disk},
+	year = {2019}}
+
+@misc{lwz-dsgtf-21,
+	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
+	date-added = {2021-06-24 14:48:05 -0500},
+	date-modified = {2021-06-24 14:49:09 -0500},
+	howpublished = {Preprint},
+	month = {June},
+	title = {The deformation space of geodesic triangulations of flat tori},
+	year = {2021}}
 
 @article{ddfpr-upm-20,
 	abstract = {We prove that, given two topologically-equivalent upward planar straight-line drawings of an n-vertex directed graph G, there always exists a morph between them such that all the intermediate drawings of the morph are upward planar and straight-line. Such a morph consists of O(1) morphing steps if G is a reduced planar st-graph, O(n) morphing steps if G is a planar st-graph, O(n) morphing steps if G is a reduced upward planar graph, and {\$}{\$}O(n\^{}2){\$}{\$}morphing steps if G is a general upward planar graph. Further, we show that {\$}{\$}{$\backslash$}varOmega (n){\$}{\$}morphing steps might be necessary for an upward planar morph between two topologically-equivalent upward planar straight-line drawings of an n-vertex path.},
@@ -180,10 +219,10 @@
 	Bdsk-Url-1 = {https://doi.org/10.1145/2816795.2818099}}
 
 @misc{l-sgts-20,
-	arxiv = {1910.03070},
+	arxiv = {1910.03070v3},
 	author = {Luo, Yanwen},
 	date-added = {2021-05-31 14:55:49 -0500},
-	date-modified = {2021-05-31 14:56:46 -0500},
+	date-modified = {2021-06-24 15:38:48 -0500},
 	howpublished = {Preprint},
 	month = {August},
 	title = {Spaces of geodesic triangulations of surfaces},
@@ -214,11 +253,11 @@
 	year = {2015},
 	Bdsk-Url-1 = {https://doi.org/10.4310/AJM.2015.v19.n4.a2}}
 
-@inproceedings{chhs-prlhei-83,
+@inproceedings{chhs-prlhe-83,
 	author = {Connelly, Robert and Henderson, David W. and Ho, Chung Wu and Starbird, Michael},
 	booktitle = {Continua, Decompositions, Manifolds: Proc. Texas Topology Symposium, 1980},
 	date-added = {2021-05-19 16:00:56 -0500},
-	date-modified = {2021-05-19 16:05:43 -0500},
+	date-modified = {2021-06-24 14:54:08 -0500},
 	keywords = {morphing},
 	pages = {229--239},
 	publisher = {Univ. Texas Press},
