--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-24 16:17:46 -0500 
+%% Created for Jeff Erickson at 2021-06-24 18:36:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{n-ihi-89,
+	author = {Norris, Douglas A.},
+	date-added = {2021-06-24 18:34:48 -0500},
+	date-modified = {2021-06-24 18:35:51 -0500},
+	doi = {10.2307/2046921},
+	journal = {Proc. Amer. Math. Soc.},
+	number = {3},
+	pages = {692--696},
+	title = {Isometries homotopic to the identity},
+	volume = {105},
+	year = {1989}}
 
 @article{ah-sgts-87,
 	author = {Awartini, Marwan and Henderson, David W.},
