--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,23 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-22 15:34:13 -0500 
+%% Created for Jeff Erickson at 2021-06-25 11:17:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@inproceedings{ckpps-facsd-16,
+	arxiv = {1608.03270},
+	author = {Cohen, Michael B. and Kelner, Jonathan and Peebles, John and Peng, Richard and Sidford, Aaron and Vladu, Adrian},
+	booktitle = {Proc. 57th Ann. IEEE Symp. Found. Comput. Sci.},
+	date-added = {2021-06-25 10:57:31 -0500},
+	date-modified = {2021-06-25 11:01:57 -0500},
+	doi = {10.1109/FOCS.2016.69},
+	pages = {583--592},
+	title = {Faster Algorithms for Computing the Stationary Distribution, Simulating Random Walks, and More},
+	year = {2016}}
+
 @inproceedings{ckkpp-sdlsn-18,
 	arxiv = {1811.10722},
 	author = {Cohen, Michael B. and Kelner, Jonathan and Kyng, Rasmus and Peebles, John and Peng, Richard and Rao, Anup B. and Sidford, Aaron},
-	booktitle = {Proc. 59th Ann. IEEE Sympos. Found. Comput. Sci.},
+	booktitle = {Proc. 59th Ann. IEEE Symp. Found. Comput. Sci.},
 	date-added = {2021-06-22 13:48:15 -0500},
-	date-modified = {2021-06-22 15:34:09 -0500},
+	date-modified = {2021-06-25 10:59:25 -0500},
 	doi = {10.1109/FOCS.2018.00089},
 	pages = {898--909},
 	title = {Solving Directed {Laplacian} Systems in Nearly-Linear Time through Sparse {LU} Factorizations},
-	year = {2018}}
+	year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1109/FOCS.2018.00089}}
 
 @article{b-simig-68,
 	author = {Bareiss, Erwin H.},
@@ -51,10 +63,10 @@
 
 @inproceedings{ay-slstn-10,
 	author = {Alon, Noga and Yuster, Raphael},
-	booktitle = {Proc. 51st IEEE Symp. Found. Comput. Sci.},
+	booktitle = {Proc. 51st Ann. IEEE Symp. Found. Comput. Sci.},
 	comments = {Full version in \cite{ay-msnda-13}},
 	date-added = {2021-06-20 17:28:22 -0500},
-	date-modified = {2021-06-20 17:50:41 -0500},
+	date-modified = {2021-06-25 10:59:44 -0500},
 	doi = {10.1109/FOCS.2010.28},
 	keywords = {nested dissection, asymmetric, arbitrary fields},
 	pages = {225--234},
