--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-24 18:36:29 -0500 
+%% Created for Jeff Erickson at 2021-06-26 14:33:55 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -19,7 +19,8 @@
 	pages = {692--696},
 	title = {Isometries homotopic to the identity},
 	volume = {105},
-	year = {1989}}
+	year = {1989},
+	Bdsk-Url-1 = {https://doi.org/10.2307/2046921}}
 
 @article{ah-sgts-87,
 	author = {Awartini, Marwan and Henderson, David W.},
@@ -31,7 +32,8 @@
 	pages = {721--732},
 	title = {Spaces of geodesic triangulations of the sphere},
 	volume = {304},
-	year = {1987}}
+	year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.2307/2000738}}
 
 @phdthesis{l-ssgts-20,
 	author = {Luo, Yanwen},
@@ -23311,9 +23313,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{ght-stgbg-84,
 	author = {Gilbert, John R. and Hutchinson, Joan P. and Tarjan, Robert Endre},
 	date-added = {2008-06-29 22:59:49 -0500},
-	date-modified = {2012-05-06 20:28:08 +0000},
+	date-modified = {2021-06-26 14:33:55 -0500},
+	doi = {10.1016/0196-6774(84)90019-1},
 	journal = {J. Algorithms},
-	keywords = {graphs},
 	number = {3},
 	pages = {391--407},
 	read = {1},
