resync with min-cut-surf

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,101 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-26 14:33:55 -0500 
+%% Created for Jeff Erickson at 2021-06-28 16:15:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{aaet-rwsp-17,
+	abstract = {We present an {\$}{\$}O(n{\backslash}log n){\$}{\$}O(nlogn)-time algorithm that determines whether a given n-gon in the plane is weakly simple. This improves upon an {\$}{\$}O(n^2{\backslash}log n){\$}{\$}O(n2logn)-time algorithm by Chang et al. (Proceedings of the 26th ACM-SIAM symposium on discrete algorithm, SIAM, 2015). Weakly simple polygons are required as input for several geometric algorithms. As such, recognizing simple or weakly simple polygons is a fundamental problem.},
+	author = {Akitaya, Hugo A. and Aloupis, Greg and Erickson, Jeff and T{\'o}th, Csaba D.},
+	date-added = {2021-06-28 16:14:38 -0500},
+	date-modified = {2021-06-28 16:14:46 -0500},
+	journal = {Discrete Comput. Geom.},
+	number = {4},
+	pages = {785--821},
+	title = {Recognizing Weakly Simple Polygons},
+	volume = {58},
+	year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-017-9918-3}}
+
+@inproceedings{cex-dwsp-15,
+	arxiv = {1407.3340},
+	author = {Chang, Hsien-Chih and Erickson, Jeff and Xu, Chao},
+	booktitle = {Proc. 26th ACM-SIAM Symp. Discrete Algorithms},
+	date-added = {2021-06-28 16:14:26 -0500},
+	date-modified = {2021-06-28 16:14:26 -0500},
+	doi = {10.1137/1.9781611973730.110},
+	pages = {1655--1670},
+	title = {Detecting weakly simple polygons},
+	year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1137/1.9781611973730.110}}
+
+@misc{fls-fuadp-18,
+	arxiv = {1702.04786v4},
+	author = {Fakcharoenphol, Jittat and Laekhanukit, Bundit and Sukprasert, Pattara},
+	date-added = {2021-06-28 16:14:10 -0500},
+	date-modified = {2021-06-28 16:14:10 -0500},
+	howpublished = {Preprint},
+	month = {May},
+	read = {1},
+	title = {Finding all useless arcs in directed planar graphs},
+	year = {2018}}
+
+@inproceedings{gs-lsatw-02,
+	author = {Grigni, Michelangelo and Sissokho, Papa},
+	booktitle = {Proc. 13th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	date-added = {2021-06-28 16:13:54 -0500},
+	date-modified = {2021-06-28 16:13:54 -0500},
+	pages = {852--857},
+	read = {1},
+	title = {Light spanners and approximate {TSP} in weighted graphs with forbidden minors},
+	year = {2002}}
+
+@inproceedings{blw-mghls-17,
+	author = {Borradaile, Glencora and Le, Hung and Wulff{-}Nilsen, Christian},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/bib/conf/focs/BorradaileLW17},
+	booktitle = {Proc. 58th IEEE Symp. Found. Comput. Sci.},
+	date-added = {2021-06-28 16:13:40 -0500},
+	date-modified = {2021-06-28 16:13:40 -0500},
+	doi = {10.1109/FOCS.2017.76},
+	pages = {767--778},
+	timestamp = {Tue, 04 Dec 2018 10:17:29 +0100},
+	title = {Minor-Free Graphs Have Light Spanners},
+	year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1109/FOCS.2017.76}}
+
+@article{bdt-passp-14,
+	author = {Borradaile, Glencora and Demaine, Erik D. and Tazari, Siamak},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/bib/journals/algorithmica/BorradaileDT14},
+	date-added = {2021-06-28 16:13:10 -0500},
+	date-modified = {2021-06-28 16:13:10 -0500},
+	doi = {10.1007/s00453-012-9662-2},
+	journal = {Algorithmica},
+	number = {2},
+	pages = {287--311},
+	timestamp = {Wed, 17 May 2017 14:25:12 +0200},
+	title = {Polynomial-Time Approximation Schemes for Subset-Connectivity Problems in Bounded-Genus Graphs},
+	volume = {68},
+	year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00453-012-9662-2}}
+
+@article{ls-btals-98,
+	author = {Lov{\'a}sz, L{\'a}szl{\'o} and Schrijver, Alexander},
+	date-added = {2021-06-28 11:00:57 -0500},
+	date-modified = {2021-06-28 11:05:11 -0500},
+	doi = {10.1090/S0002-9939-98-04244-0},
+	journal = {Proc. Amer. Math. Soc.},
+	number = {5},
+	pages = {1275--1285},
+	title = {A {Borsuk} theorem for antipodal links and a spectral characterization of linklessly embeddable graphs},
+	volume = {126},
+	year = {1998},
+	Bdsk-Url-1 = {https://doi.org/10.1090/S0002-9939-98-04244-0}}
 
 @article{n-ihi-89,
 	author = {Norris, Douglas A.},
