--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-26 14:33:55 -0500 
+%% Created for Jeff Erickson at 2021-08-20 11:38:37 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{k-cdhgl-21,
+	author = {Klemz, Boris},
+	booktitle = {Proc. 29th Ann. Europ. Symp. Algorithms},
+	date-added = {2021-08-20 11:34:24 -0500},
+	date-modified = {2021-08-20 11:38:12 -0500},
+	doi = {10.4230/LIPIcs.ESA.2021.68)},
+	pages = {68:1--68:15},
+	series = {Leibniz Int. Proc. Informatics},
+	title = {Convex drawings of hierarchical graphs in linear time, with applications to planar graph morphing},
+	year = {2021}}
 
 @article{n-ihi-89,
 	author = {Norris, Douglas A.},
