--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-08-20 11:38:37 -0500 
+%% Created for Jeff Erickson at 2021-08-20 11:40:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,7 +18,8 @@
 	pages = {68:1--68:15},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Convex drawings of hierarchical graphs in linear time, with applications to planar graph morphing},
-	year = {2021}}
+	year = {2021},
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.ESA.2021.68)}}
 
 @article{n-ihi-89,
 	author = {Norris, Douglas A.},
@@ -65,11 +66,12 @@
 	year = {2019}}
 
 @misc{lwz-dsgtf-21,
+	arxiv = {2107.05159},
 	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
 	date-added = {2021-06-24 14:48:05 -0500},
-	date-modified = {2021-06-24 14:49:09 -0500},
+	date-modified = {2021-08-20 11:40:07 -0500},
 	howpublished = {Preprint},
-	month = {June},
+	month = {July},
 	title = {The deformation space of geodesic triangulations of flat tori},
 	year = {2021}}
 
