--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,37 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-28 16:15:54 -0500 
+%% Created for Jeff Erickson at 2021-08-24 16:14:15 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{t-tst-04,
+	author = {Thomassen, Carsten},
+	date-added = {2021-08-24 16:12:57 -0500},
+	date-modified = {2021-08-24 16:14:12 -0500},
+	doi = {10.1002/jgt.10163},
+	journal = {J. Graph Theory},
+	number = {4},
+	pages = {275--280},
+	title = {Tutte's spring theorem},
+	volume = {45},
+	year = {2004}}
+
+@article{c-re-82,
+	author = {Connelly, Robert},
+	date-added = {2021-08-24 15:49:39 -0500},
+	date-modified = {2021-08-24 15:56:01 -0500},
+	doi = {10.1007/BF01404753},
+	journal = {Invent. Math.},
+	keywords = {equilibirum stress, Maxwell-Cremona},
+	number = {1},
+	pages = {11--33},
+	title = {Rigidity and Energy},
+	volume = {66},
+	year = {1982}}
 
 @inproceedings{k-cdhgl-21,
 	author = {Klemz, Boris},
