--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-08-24 16:14:15 -0500 
+%% Created for Jeff Erickson at 2021-09-10 10:13:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{d-bdpg-03,
+	author = {Delgado-Friedrichs, Olaf},
+	booktitle = {Proc. 11th Symp. Graph Drawing},
+	date-added = {2021-08-25 14:29:16 -0500},
+	date-modified = {2021-08-25 14:32:47 -0500},
+	doi = {10.1007/978-3-540-24595-7\_17},
+	number = {2912},
+	pages = {178--189},
+	series = {Lecture Notes Comput. Sci.},
+	title = {Barycentric Drawings of Periodic Graphs},
+	year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-540-24595-7%5C_17}}
 
 @article{t-tst-04,
 	author = {Thomassen, Carsten},
@@ -19,7 +32,8 @@
 	pages = {275--280},
 	title = {Tutte's spring theorem},
 	volume = {45},
-	year = {2004}}
+	year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1002/jgt.10163}}
 
 @article{c-re-82,
 	author = {Connelly, Robert},
@@ -32,19 +46,21 @@
 	pages = {11--33},
 	title = {Rigidity and Energy},
 	volume = {66},
-	year = {1982}}
+	year = {1982},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01404753}}
 
 @inproceedings{k-cdhgl-21,
 	author = {Klemz, Boris},
 	booktitle = {Proc. 29th Ann. Europ. Symp. Algorithms},
 	date-added = {2021-08-20 11:34:24 -0500},
-	date-modified = {2021-08-20 11:38:12 -0500},
-	doi = {10.4230/LIPIcs.ESA.2021.68)},
-	pages = {68:1--68:15},
+	date-modified = {2021-09-10 10:13:43 -0500},
+	doi = {10.4230/LIPIcs.ESA.2021.68},
+	number = {204},
+	pages = {57:1--57:15},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Convex drawings of hierarchical graphs in linear time, with applications to planar graph morphing},
 	year = {2021},
-	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.ESA.2021.68)}}
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.ESA.2021.68}}
 
 @article{aaet-rwsp-17,
 	abstract = {We present an {\$}{\$}O(n{\backslash}log n){\$}{\$}O(nlogn)-time algorithm that determines whether a given n-gon in the plane is weakly simple. This improves upon an {\$}{\$}O(n^2{\backslash}log n){\$}{\$}O(n2logn)-time algorithm by Chang et al. (Proceedings of the 26th ACM-SIAM symposium on discrete algorithm, SIAM, 2015). Weakly simple polygons are required as input for several geometric algorithms. As such, recognizing simple or weakly simple polygons is a fundamental problem.},
@@ -666,10 +682,12 @@
 	booktitle = {Proc. 32nd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	comments = {ω < 2.37286},
 	date-added = {2020-11-13 11:55:56 -0600},
-	date-modified = {2020-11-13 11:55:56 -0600},
+	date-modified = {2021-08-25 14:37:10 -0500},
+	doi = {0.1137/1.9781611976465.32},
 	month = {October},
 	title = {A Refined Laser Method and Faster Matrix Multiplication},
-	year = {2021}}
+	year = {2021},
+	Bdsk-Url-1 = {https://doi.org/0.1137/1.9781611976465.32}}
 
 @inproceedings{dew-gtlcn-15,
 	author = {Dujmovi{\'c}, Vida and Eppstein, David and Wood, David R.},
