--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-09-10 10:13:43 -0500 
+%% Created for Jeff Erickson at 2021-09-10 10:39:57 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{df-ftfgrp-21,
+	arxiv = {2108.09483},
+	author = {{Di Battista}, Giuseppe and Frati, Fabrizio},
+	date-added = {2021-09-10 10:35:19 -0500},
+	date-modified = {2021-09-10 10:37:19 -0500},
+	howpublished = {Preprint},
+	title = {From {Tutte} to {Floater} and {Gotsman}: {On} the Resolution of Planar Straight-line Drawings and Morphs},
+	year = {2021}}
 
 @inproceedings{d-bdpg-03,
 	author = {Delgado-Friedrichs, Olaf},
